Refactor send individual sms by moving the logic to another method.